# eval_crosscoder

./: .gitignore  README.md  proposal.md  pyproject.toml
conf/: main_real.yaml  main_real_h800.yaml  main_real_kaggle_t4x2.yaml  main_real_rtx5070_laptop.yaml  main_simulated.yaml  pilot_real.yaml  pilot_real_h800.yaml  pilot_real_kaggle_t4.yaml  pilot_real_kaggle_t4_smoke.yaml  pilot_real_kaggle_t4x2.yaml  pilot_real_kaggle_t4x2_smoke.yaml  pilot_real_rtx5070_laptop.yaml  pilot_real_rtx5070_laptop_smoke.yaml  pilot_simulated.yaml  pilot_smoke.yaml
conf/cache/: default.yaml  low_vram.yaml
conf/causal/: default.yaml  low_vram.yaml
conf/data/: main_generated.yaml  main_generated_rtx5070_laptop.yaml  pilot_generated.yaml  pilot_generated_kaggle_t4.yaml  pilot_smoke.yaml
conf/evaluation/: main.yaml  pilot.yaml  pilot_smoke.yaml
conf/lora/: real_default.yaml  real_h800_fast.yaml  real_low_vram.yaml  real_smoke_low_vram.yaml  simulated_default.yaml  simulated_smoke.yaml
conf/methods/: main.yaml  pilot.yaml  pilot_smoke.yaml
conf/model/: gemma2_2b_it.yaml  qwen2_5_1_5b_instruct.yaml  qwen2_5_3b_instruct.yaml  simulated_medium.yaml  simulated_small.yaml
conf/task/: citation_abstention.yaml  json_only.yaml
configs/: main_real.json  main_simulated.json  pilot_real.json  pilot_simulated.json  pilot_smoke.json
src/eval_crosscoder/: __init__.py  behavior.py  cli.py  config.py  runs.py  specs.py  utils.py
src/eval_crosscoder/backends/: huggingface.py
src/eval_crosscoder/cache/: __init__.py  pipeline.py
tests/: test_smoke_pipeline.py
(+13 files in other folders)
