[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-crosscoder"
version = "0.1.0"
description = "Controlled LoRA diffing evaluation framework with a local simulated backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "hydra-core>=1.3",
  "numpy>=2.0",
  "scikit-learn>=1.6",
  "torch>=2.0",
]

[project.optional-dependencies]
real = [
  "transformers>=4.45",
  "peft>=0.13",
  "sentencepiece>=0.2",
]

[project.scripts]
eval-crosscoder = "eval_crosscoder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
